<resources>
    <string name="app_name">theakj 1</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="divide">Divide</string>
    <string name="answer">Answer</string>
    <string name="substract">Substract</string>
    <string name="multiply">Multiply</string>
    <string name="add">Add</string>
</resources>